6回の宿題をやり始めた。。。

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ADA2_python/
 ADA4_Python
 ADA5_Python
+ADA6_Python
 Lecture_4/bad.png
 handson20190514
 answer20190514
 PRML04.ppt
+GCI2019_第2回目_データ分析の基礎と4つのライブラリ応用編.pdf
