--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-ADA2_python/
-ADA4_Python
-ADA5_Python
-ADA6_Python
+ADA*
 Lecture_4/bad.png
 handson20190514
 answer20190514
 PRML04.ppt
-GCI2019_第2回目_データ分析の基礎と4つのライブラリ応用編.pdf
