--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ PRML04.ppt
 handsout_homework/cifar-10-batches-py
 
 handsout_homework/tensorboard_log
+
+handsout_homework/VAE_hands_on.ipynb
+
+handsout_homework/VAE.ipynb
